PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Global_Variables_multiple_values.pf
module Binary{

    a Int = 34 31

}